# LFG-staking

./: Anchor.toml  package-lock.json  readme.md
programs/lfg-staking/: Cargo.toml
programs/lfg-staking/src/: constants.rs  errors.rs  lib.rs
programs/lfg-staking/src/instructions/: mod.rs
programs/lfg-staking/src/instructions/meme_coin_staking/: claim_reward_for_meme_coin.rs  meme_coin_initialize.rs  mod.rs  stake_meme_coin.rs  unstake_meme_coin.rs
programs/lfg-staking/src/instructions/ohm_staking/: buy_ohm.rs  buy_ohm_with_sol.rs  claim_ohm.rs  mod.rs  ohm_initialize.rs  stake_ohm.rs
programs/lfg-staking/src/instructions/reward_token_staking/: mod.rs
programs/ohm-fork-defi-staking/: Cargo.toml
programs/ohm-fork-defi-staking/src/: errors.rs  lib.rs
programs/ohm-fork-defi-staking/src/instructions/: mod.rs
programs/ohm-fork-defi-staking/src/instructions/ohm_staking/: mod.rs
tests/: lfg-staking.ts  ohm-fork-defi-staking.ts
